Smoother animations. Second hand moves continuously. Changed to getAnimationFrame() Page should now fit window properly. Text resizes automatically depending on viewport. Same goes for the hands. Hour arm correctly aligns to current time.

--- a/time/bright.css
+++ b/time/bright.css
@@ -1,15 +1,9 @@
-.clock-face {
-  background-color: #E3F2FD;
-}
-
+.clock-face,
 .middle {
   background-color: #E3F2FD;
 }
 
-.hour {
-  background-color: #82B1FF;
-}
-
+.hour,
 .minute {
   background-color: #82B1FF;
 }
