--- a/time/main.css
+++ b/time/main.css
@@ -1,18 +1,18 @@
 body {
   margin: 0 auto;
-  position: relative;
+  position: fixed;
   width: 100vw;
   height: 100vh;
   -webkit-transition: background-color 0.5s ease;
   -o-transition: background-color 0.5s ease;
   transition: background-color 0.5s ease;
-  /*background-color: #E3F2FD; /*temp*/*/
+  /*background-color: #E3F2FD; /*temp*/
 }
 
 .clock-face {
   position: relative;
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
   -webkit-transition: background-color 0.5s ease;
   -o-transition: background-color 0.5s ease;
   transition: background-color 0.5s ease;
@@ -44,17 +44,17 @@ body {
 }
 
 .hour {
-  height: 25vh;
+  height: 25vmin;
   z-index: 100;
 }
 
 .minute {
-  height: 35vh;
+  height: 35vmin;
   z-index: 200;
 }
 
 .second {
-  height: 45vh;
+  height: 45vmin;
   z-index: 300;
 }
 
@@ -69,9 +69,9 @@ body {
 
 .date {
   position: absolute;
-  top: 95%;
+  top: 85vh;
   left: 50%;
-  width: 40%;
+  width: 100vw;
   height: 100px;
   -webkit-transform: translate(-50%, -50%);
   -ms-transform: translate(-50%, -50%);
@@ -87,5 +87,31 @@ body {
   -o-transition: background-color 0.5s ease;
   transition: background-color 0.5s ease;
   font-family: 'Lato', sans-serif;
-  font-size: 2em;
+}
+
+@media all and (min-width: 960px) {
+  .date > p {
+    font-size: 4vmin;
+  }
+  .date {
+    top: 90vh;
+  }
+}
+
+@media all and (max-width: 959px) and (min-width: 600px) {
+  .date > p {
+    font-size: 6vmin;
+  }
+    .date {
+    top: 90vh;
+  }
+}
+
+@media all and (max-width: 599px) and (min-width: 50px) {
+  .date > p {
+    font-size: 9vmin;
+  }
+    .date {
+    top: 95vh;
+  }
 }
